--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -1,11 +1,9 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ include file="/commons/global.jsp" %>
 <!DOCTYPE html>
 <html>
 <head>
-<%@ include file="/commons/basejs.jsp" %>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>主页</title>
+<%include("/common/basejs.html"){}%>
 <script type="text/javascript">
     var index_layout;
     var index_tabs;
@@ -44,7 +42,7 @@
         });
 
         layout_west_tree = $('#layout_west_tree').tree({
-            url : '${path }/resource/tree',
+            url : '/resource/tree',
             parentField : 'pid',
             lines : true,
             onClick : function(node) {
@@ -56,7 +54,7 @@
                         iconCls : node.iconCls
                     });
                 } else if (node.attributes) {
-                    var url = '${path }' + node.attributes;
+                    var url = node.attributes;
                     addTab({
                         url : url,
                         title : node.text,
@@ -89,10 +87,10 @@
         $.messager.confirm('提示','确定要退出?',function(r){
             if (r){
                 progressLoad();
-                $.post('${path }/logout', function(result) {
+                $.post('/logout', function(result) {
                     if(result.success){
                         progressClose();
-                        window.location.href='${path }';
+                        window.location.href='';
                     }
                 }, 'json');
             }
@@ -104,7 +102,7 @@
             title : '修改密码',
             width : 300,
             height : 250,
-            href : '${path }/user/editPwdPage',
+            href : '/user/editPwdPage',
             buttons : [ {
                 text : '确定',
                 handler : function() {
@@ -119,7 +117,7 @@
 </head>
 <body>
     <div id="loading" style="position: fixed;top: -50%;left: -50%;width: 200%;height: 200%;background: #fff;z-index: 100;overflow: hidden;">
-        <img src="${staticPath }/static/style/images/ajax-loader.gif" style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;margin: auto;"/>
+        <img src="/static/style/images/ajax-loader.gif" style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;margin: auto;"/>
     </div>
     <div id="index_layout">
         <div data-options="region:'north',border:false" style=" overflow: hidden; ">
