--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -209,7 +209,7 @@
         <div style="height: 50px; line-height: 50px; margin-top: 30px; border-top-color: rgb(231, 231, 231); border-top-width: 1px; border-top-style: solid;">
             <P style="margin: 0px 35px 20px 45px;">
                 <span style="float: left;">
-		            <input type="checkbox" name="reme"/>
+		            <input type="checkbox" name="rememberMe"/>
                     <a style="color: rgb(204, 204, 204);" href="javascript:;">忘记密码?</a>
                 </span>
                 <span style="float: right;">
