--- a/src/main/webapp/WEB-INF/views/admin/syslog.html
+++ b/src/main/webapp/WEB-INF/views/admin/syslog.html
@@ -1,9 +1,7 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<%@ include file="/commons/global.jsp" %>
 <!DOCTYPE html>
 <html>
 <head>
-    <%@ include file="/commons/basejs.jsp" %>
+    <%include("/common/basejs.html"){}%>
     <meta http-equiv="X-UA-Compatible" content="edge"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>日志管理</title>
@@ -11,7 +9,7 @@
         var dataGrid;
         $(function () {
             dataGrid = $('#dataGrid').datagrid({
-                url: '${path }/sysLog/dataGrid',
+                url: '/sysLog/dataGrid',
                 fit: true,
                 striped: true,
                 pagination: true,
