--- a/src/main/webapp/WEB-INF/views/admin/userEditPwd.html
+++ b/src/main/webapp/WEB-INF/views/admin/userEditPwd.html
@@ -1,10 +1,8 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ include file="/commons/global.jsp" %>
 <script type="text/javascript">
     $(function() {
 
         $('#editUserPwdForm').form({
-            url : '${path }/user/editUserPwd',
+            url : '/user/editUserPwd',
             onSubmit : function() {
                 progressLoad();
                 var isValid = $(this).form('validate');
