--- a/src/main/webapp/WEB-INF/views/admin/resource.html
+++ b/src/main/webapp/WEB-INF/views/admin/resource.html
@@ -1,16 +1,14 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ include file="/commons/global.jsp" %>
 <!DOCTYPE html>
 <html>
 <head>
-<%@ include file="/commons/basejs.jsp" %>
+<%include("/common/basejs.html"){}%>
 <meta http-equiv="X-UA-Compatible" content="edge" />
-<title>机构管理</title>
+<title>资源管理</title>
 <script type="text/javascript">
     var treeGrid;
     $(function() {
         treeGrid = $('#treeGrid').treegrid({
-            url : '${path }/organization/treeGrid',
+            url : '/resource/treeGrid',
             idField : 'id',
             treeField : 'name',
             parentField : 'pid',
@@ -18,19 +16,18 @@
             fitColumns : false,
             border : false,
             frozenColumns : [ [ {
-                title : 'id',
+                title : '编号',
                 field : 'id',
-                width : 40,
-                hidden : true
+                width : 40
             } ] ],
             columns : [ [ {
-                field : 'code',
-                title : '编号',
-                width : 40
-            },{
                 field : 'name',
-                title : '部门名称',
-                width : 180
+                title : '资源名称',
+                width : 150
+            }, {
+                field : 'url',
+                title : '资源路径',
+                width : 200
             }, {
                 field : 'seq',
                 title : '排序',
@@ -38,44 +35,60 @@
             }, {
                 field : 'iconCls',
                 title : '图标',
-                width : 100
-            },  {
-                width : '130',
-                title : '创建时间',
-                field : 'createdate'
-            },{
+                width : 90
+            }, {
+                field : 'resourcetype',
+                title : '资源类型',
+                width : 80,
+                formatter : function(value, row, index) {
+                    switch (value) {
+                    case 0:
+                        return '菜单';
+                    case 1:
+                        return '按钮';
+                    }
+                }
+            }, {
                 field : 'pid',
                 title : '上级资源ID',
                 width : 150,
                 hidden : true
             }, {
-                field : 'address',
-                title : '地址',
-                width : 120
-            } , {
+                field : 'status',
+                title : '状态',
+                width : 40,
+                formatter : function(value, row, index) {
+                    switch (value) {
+                    case 0:
+                        return '正常';
+                    case 1:
+                        return '停用';
+                    }
+                }
+            }, {
                 field : 'action',
                 title : '操作',
                 width : 130,
                 formatter : function(value, row, index) {
                     var str = '';
-                        <shiro:hasPermission name="/organization/edit">
-                            str += $.formatString('<a href="javascript:void(0)" class="organization-easyui-linkbutton-edit" data-options="plain:true,iconCls:\'icon-edit\'" onclick="editFun(\'{0}\');" >编辑</a>', row.id);
-                        </shiro:hasPermission>
-                        <shiro:hasPermission name="/organization/delete">
+                    	<%if(shiro.hasPermission("/resource/edit")){%>
+                            str += $.formatString('<a href="javascript:void(0)" class="resource-easyui-linkbutton-edit" data-options="plain:true,iconCls:\'icon-edit\'" onclick="editFun(\'{0}\');" >编辑</a>', row.id);
+                        <%}%>
+                        <%if(shiro.hasPermission("/resource/delete")){%>
                             str += '&nbsp;&nbsp;|&nbsp;&nbsp;';
-                            str += $.formatString('<a href="javascript:void(0)" class="organization-easyui-linkbutton-del" data-options="plain:true,iconCls:\'icon-del\'" onclick="deleteFun(\'{0}\');" >删除</a>', row.id);
-                        </shiro:hasPermission>
+                            str += $.formatString('<a href="javascript:void(0)" class="resource-easyui-linkbutton-del" data-options="plain:true,iconCls:\'icon-del\'" onclick="deleteFun(\'{0}\');" >删除</a>', row.id);
+                        <%}%>
                     return str;
                 }
             } ] ],
             onLoadSuccess:function(data){
-                $('.organization-easyui-linkbutton-edit').linkbutton({text:'编辑',plain:true,iconCls:'icon-edit'});
-                $('.organization-easyui-linkbutton-del').linkbutton({text:'删除',plain:true,iconCls:'icon-del'});
+                $('.resource-easyui-linkbutton-edit').linkbutton({text:'编辑',plain:true,iconCls:'icon-edit'});
+                $('.resource-easyui-linkbutton-del').linkbutton({text:'删除',plain:true,iconCls:'icon-del'});
             },
             toolbar : '#toolbar'
         });
     });
-    
+
     function editFun(id) {
         if (id != undefined) {
             treeGrid.treegrid('select', id);
@@ -85,20 +98,20 @@
             parent.$.modalDialog({
                 title : '编辑',
                 width : 500,
-                height : 300,
-                href : '${path }/organization/editPage?id=' + node.id,
+                height : 350,
+                href : '/resource/editPage?id=' + node.id,
                 buttons : [ {
-                    text : '编辑',
+                    text : '确定',
                     handler : function() {
                         parent.$.modalDialog.openner_treeGrid = treeGrid;//因为添加成功之后，需要刷新这个treeGrid，所以先预定义好
-                        var f = parent.$.modalDialog.handler.find('#organizationEditForm');
+                        var f = parent.$.modalDialog.handler.find('#resourceEditForm');
                         f.submit();
                     }
                 } ]
             });
         }
     }
-    
+
     function deleteFun(id) {
         if (id != undefined) {
             treeGrid.treegrid('select', id);
@@ -108,14 +121,13 @@
             parent.$.messager.confirm('询问', '您是否要删除当前资源？删除当前资源会连同子资源一起删除!', function(b) {
                 if (b) {
                     progressLoad();
-                    $.post('${path }/organization/delete', {
+                    $.post('/resource/delete', {
                         id : node.id
                     }, function(result) {
                         if (result.success) {
                             parent.$.messager.alert('提示', result.msg, 'info');
                             treeGrid.treegrid('reload');
-                        }else{
-                            parent.$.messager.alert('提示', result.msg, 'info');
+                            parent.layout_west_tree.tree('reload');
                         }
                         progressClose();
                     }, 'JSON');
@@ -123,18 +135,18 @@
             });
         }
     }
-    
+
     function addFun() {
         parent.$.modalDialog({
             title : '添加',
             width : 500,
-            height : 300,
-            href : '${path }/organization/addPage',
+            height : 350,
+            href : '/resource/addPage',
             buttons : [ {
                 text : '添加',
                 handler : function() {
                     parent.$.modalDialog.openner_treeGrid = treeGrid;//因为添加成功之后，需要刷新这个treeGrid，所以先预定义好
-                    var f = parent.$.modalDialog.handler.find('#organizationAddForm');
+                    var f = parent.$.modalDialog.handler.find('#resourceAddForm');
                     f.submit();
                 }
             } ]
@@ -147,12 +159,12 @@
         <div data-options="region:'center',border:false"  style="overflow: hidden;">
             <table id="treeGrid"></table>
         </div>
-        
-        <div id="toolbar" style="display: none;">
-            <shiro:hasPermission name="/organization/add">
-                <a onclick="addFun();" href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-add'">添加</a>
-            </shiro:hasPermission>
-        </div>
+    </div>
+
+    <div id="toolbar" style="display: none;">
+    	<%if(shiro.hasPermission("/resource/add")){%>
+        <a onclick="addFun();" href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-add'">添加</a>
+    	<%}%>
     </div>
 </body>
 </html>
