--- a/src/main/webapp/WEB-INF/views/admin/resourceEdit.html
+++ b/src/main/webapp/WEB-INF/views/admin/resourceEdit.html
@@ -1,10 +1,8 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ include file="/commons/global.jsp" %>
 <script type="text/javascript">
     $(function() {
 
         $('#pid').combotree({
-            url : '${path }/resource/tree',
+            url : '/resource/tree',
             parentField : 'pid',
             lines : true,
             panelHeight : 'auto',
@@ -12,7 +10,7 @@
         });
         
         $('#resourceEditForm').form({
-            url : '${path }/resource/edit',
+            url : '/resource/edit',
             onSubmit : function() {
                 progressLoad();
                 var isValid = $(this).form('validate');
