--- a/src/main/webapp/WEB-INF/views/admin/role.html
+++ b/src/main/webapp/WEB-INF/views/admin/role.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <%include("/common/basejs.html"){}%>
     <script type="text/javascript">
     var dataGrid;
     $(function() {
@@ -57,17 +58,17 @@
                 width : 200,
                 formatter : function(value, row, index) {
                     var str = '';
-                        <shiro:hasPermission name="/role/grant">
+                        <%if(shiro.hasPermission("/role/grant")){%>
                             str += $.formatString('<a href="javascript:void(0)" class="role-easyui-linkbutton-ok" data-options="plain:true,iconCls:\'icon-ok\'" onclick="grantFun(\'{0}\');" >授权</a>', row.id);
-                        </shiro:hasPermission>
-                        <shiro:hasPermission name="/role/edit">
+                        <%}%>
+                        <%if(shiro.hasPermission("/role/edit")){%>
                             str += '&nbsp;&nbsp;|&nbsp;&nbsp;';
                             str += $.formatString('<a href="javascript:void(0)" class="role-easyui-linkbutton-edit" data-options="plain:true,iconCls:\'icon-edit\'" onclick="editFun(\'{0}\');" >编辑</a>', row.id);
-                        </shiro:hasPermission>
-                        <shiro:hasPermission name="/role/delete">
+                            <%}%>
+                        <%if(shiro.hasPermission("/role/delete")){%>
                             str += '&nbsp;&nbsp;|&nbsp;&nbsp;';
                             str += $.formatString('<a href="javascript:void(0)" class="role-easyui-linkbutton-del" data-options="plain:true,iconCls:\'icon-del\'" onclick="deleteFun(\'{0}\');" >删除</a>', row.id);
-                        </shiro:hasPermission>
+                        <%}%>
                     return str;
                 }
             } ] ],
@@ -130,7 +131,7 @@
         parent.$.messager.confirm('询问', '您是否要删除当前角色？', function(b) {
             if (b) {
                 progressLoad();
-                $.post('${ctx}/role/delete', {
+                $.post('/role/delete', {
                     id : id
                 }, function(result) {
                     if (result.success) {
@@ -174,9 +175,9 @@
         <table id="dataGrid" data-options="fit:true,border:false"></table>
     </div>
     <div id="toolbar" style="display: none;">
-        <shiro:hasPermission name="/role/add">
+        <%if(shiro.hasPermission("/role/add")){%>
             <a onclick="addFun();" href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-add'">添加</a>
-        </shiro:hasPermission>
+        <%}%>
     </div>
 </body>
 </html>
