--- a/src/main/webapp/WEB-INF/views/admin/test.html
+++ b/src/main/webapp/WEB-INF/views/admin/test.html
@@ -1,15 +1,13 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ include file="/commons/global.jsp" %>
 <!DOCTYPE html>
 <html>
 <head>
-<%@ include file="/commons/basejs.jsp" %>
+<%include("/common/basejs.html"){}%>
 <meta http-equiv="X-UA-Compatible" content="edge" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="application/javascript">
     $(function(){
         $('#dataGrid').datagrid({
-            url : '${path }/user/dataGrid',
+            url : '/user/dataGrid',
             fit : true,
             striped : true,
             rownumbers : true,
