--- a/src/main/webapp/WEB-INF/views/admin/user.html
+++ b/src/main/webapp/WEB-INF/views/admin/user.html
@@ -1,12 +1,10 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ include file="/commons/global.jsp" %>
 <!DOCTYPE html>
 <html>
 <head>
-<%@ include file="/commons/basejs.jsp" %>
+<title>用户管理</title>
 <meta http-equiv="X-UA-Compatible" content="edge" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>用户管理</title>
+<%include("/common/basejs.html"){}%>
     <script type="text/javascript">
 
     var dataGrid;
@@ -14,7 +12,7 @@
 
     $(function() {
         organizationTree = $('#organizationTree').tree({
-            url : '${path }/organization/tree',
+            url : '/organization/tree',
             parentField : 'pid',
             lines : true,
             onClick : function(node) {
@@ -25,7 +23,7 @@
         });
 
         dataGrid = $('#dataGrid').datagrid({
-            url : '${path }/user/dataGrid',
+            url : '/user/dataGrid',
             fit : true,
             striped : true,
             rownumbers : true,
@@ -128,13 +126,13 @@
                 width : 130,
                 formatter : function(value, row, index) {
                     var str = '';
-                        <shiro:hasPermission name="/user/edit">
+                    	<%if(shiro.hasPermission("/user/edit")){%>
                             str += $.formatString('<a href="javascript:void(0)" class="user-easyui-linkbutton-edit" data-options="plain:true,iconCls:\'icon-edit\'" onclick="editFun(\'{0}\');" >编辑</a>', row.id);
-                        </shiro:hasPermission>
-                        <shiro:hasPermission name="/user/delete">
+                        <%}%>
+                        <%if(shiro.hasPermission("/user/delete")){%>
                             str += '&nbsp;&nbsp;|&nbsp;&nbsp;';
                             str += $.formatString('<a href="javascript:void(0)" class="user-easyui-linkbutton-del" data-options="plain:true,iconCls:\'icon-del\'" onclick="deleteFun(\'{0}\');" >删除</a>', row.id);
-                        </shiro:hasPermission>
+                        <%}%>
                     return str;
                 }
             }] ],
@@ -151,7 +149,7 @@
             title : '添加',
             width : 500,
             height : 300,
-            href : '${path }/user/addPage',
+            href : '/user/addPage',
             buttons : [ {
                 text : '添加',
                 handler : function() {
@@ -172,10 +170,10 @@
         }
         parent.$.messager.confirm('询问', '您是否要删除当前用户？', function(b) {
             if (b) {
-                var currentUserId = '${sessionInfo.id}';/*当前登录用户的ID*/
+                var currentUserId = '${userId}';/*当前登录用户的ID*/
                 if (currentUserId != id) {
                     progressLoad();
-                    $.post('${path }/user/delete', {
+                    $.post('/user/delete', {
                         id : id
                     }, function(result) {
                         if (result.success) {
@@ -205,7 +203,7 @@
             title : '编辑',
             width : 500,
             height : 300,
-            href : '${path }/user/editPage?id=' + id,
+            href : '/user/editPage?id=' + id,
             buttons : [ {
                 text : '确定',
                 handler : function() {
@@ -250,9 +248,9 @@
         </ul>
     </div>
     <div id="toolbar" style="display: none;">
-        <shiro:hasPermission name="/user/add">
+        <%if(shiro.hasPermission("/user/add")){%>
             <a onclick="addFun();" href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-add'">添加</a>
-        </shiro:hasPermission>
+        <%}%>
     </div>
 </body>
 </html>
