--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -51,14 +51,14 @@
                     addTab({
                         url : url,
                         title : node.text,
-                        iconCls : node.iconCls
+                        iconCls : node.icon
                     });
                 } else if (node.attributes) {
                     var url = node.attributes;
                     addTab({
                         url : url,
                         title : node.text,
-                        iconCls : node.iconCls
+                        iconCls : node.icon
                     });
                 }
             }
