--- a/src/main/webapp/WEB-INF/views/admin/user.html
+++ b/src/main/webapp/WEB-INF/views/admin/user.html
@@ -30,14 +30,14 @@
             pagination : true,
             singleSelect : true,
             idField : 'id',
-            sortName : 'createdate',
+            sortName : 'crTime',
             sortOrder : 'asc',
             pageSize : 20,
             pageList : [ 10, 20, 30, 40, 50, 100, 200, 300, 400, 500 ],
             columns : [ [ {
                 width : '80',
                 title : '登录名',
-                field : 'loginname',
+                field : 'loginName',
                 sortable : true
             }, {
                 width : '80',
@@ -47,7 +47,7 @@
             },{
                 width : '80',
                 title : '部门ID',
-                field : 'organizationId',
+                field : 'orgId',
                 hidden : true
             },{
                 width : '80',
@@ -56,7 +56,7 @@
             },{
                 width : '130s',
                 title : '创建时间',
-                field : 'createdate',
+                field : 'crTime',
                 sortable : true
             },  {
                 width : '40',
@@ -97,7 +97,7 @@
             }, {
                 width : '60',
                 title : '用户类型',
-                field : 'usertype',
+                field : 'type',
                 sortable : true,
                 formatter : function(value, row, index) {
                     if(value == 0) {
