写了一个测试翻页

--- a/src/main/webapp/WEB-INF/views/admin/syslog.html
+++ b/src/main/webapp/WEB-INF/views/admin/syslog.html
@@ -29,16 +29,16 @@
                 }, {
                     width: '100',
                     title: 'IP地址',
-                    field: 'clientIp',
+                    field: 'ip',
                     sortable: true
                 }, {
                     width: '800',
                     title: '内容',
-                    field: 'optContent'
+                    field: 'content'
                 }, {
                     width: '200',
                     title: '创建时间',
-                    field: 'createTime'
+                    field: 'crTime'
                 }]]
             });
         });
